--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "classnames": "^2.3.1",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
