Improve lessons interface

--- a/teko/lib/lessons.yml
+++ b/teko/lib/lessons.yml
@@ -1,4 +1,10 @@
 - Hello World
 - Basics:
-  - Declaring variables:
-      - Blubby
+  - Comments
+  - Declaring variables
+  - Basic data types
+  - Simple operations
+  - Comparison
+  - Control blocks
+  - Arrays
+  - Maps
